# PyEnumerable

./: .gitignore  documentation.md  pyproject.toml  readme.md
.github/workflows/: cd.yml  ci.yml  lint.yml  typecheck.yml  unittest.yml
pyenumerable/: __init__.py  constructors.py  typing_utility.py
pyenumerable/abc/: enumerable.py  group.py  linq.py  py_enumerable.py
pyenumerable/abc_/: group.py  linq.py
pyenumerable/implementations/: hashed_pure_python.py  pure_python.py
pyenumerable/implementations/pure_python/: __init__.py  _enumerable.py
pyenumerable/protocol/: __init__.py  _associable.py  _enumerable.py  _queryable.py  _supports_aggregate.py  _supports_aggregation.py  _supports_all.py  _supports_append.py  _supports_average.py  _supports_cast.py  _supports_chunk.py  _supports_collective_condition_check.py  _supports_comparison.py  _supports_concat.py  _supports_concatenation.py  _supports_count.py  _supports_distinct.py  _supports_distinction.py  _supports_except.py  _supports_existence_check.py  _supports_group.py  _supports_group_by.py  _supports_group_join.py  _supports_indivisual_condition_check.py  _supports_intersect.py  _supports_intersection.py  _supports_join.py  _supports_max.py  _supports_maximum.py  _supports_min.py  _supports_minimum.py  _supports_order.py  _supports_prepend.py  _supports_reverse.py  _supports_select.py  _supports_sequence_equal.py  _supports_skip.py  _supports_subtraction.py  _supports_sum.py  _supports_take.py  (+26 more)
test/: test_dummy.py
test/unit/pure_python/: test_utility.py
test/unit/pure_python/all/: test_all_method.py
(+74 files in other folders)
