[project]
name = "pyenumerable"
version = "0.0.0"
description = "implementation of C#'s IEnumerable interface in python W/ support for generics."
readme = "readme.md"
authors = [
    { name = "AmirHossein Ahmadi", email = "amirthehossein@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = ["F401"]
lint.fixable = ["ALL"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = false
reportUnusedVariable = false
